syntax = "proto3";

option java_package = "edu.gacademy.authentication.grpc.prototypes";
option java_multiple_files = true;

service Authentication {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc LogIn (LogInRequest) returns (LogInResponse);
    rpc GetUserId (GetUserIdRequest) returns (GetUserIdResponse);
}

message SignUpRequest {
    string email = 1;
    string password = 2;
    string firstName = 3;
    string lastName = 4;
}

message SignUpResponse {
    string token = 1;
    string expiresIn = 2;
}

message LogInRequest {
    string email = 1;
    string password = 2;
}

message LogInResponse {
    string token = 1;
    string expiresIn = 2;
}

message GetUserIdRequest {
    string token = 1;
}

message GetUserIdResponse {
    uint32 userId = 1;
}
