syntax = "proto3";

option java_package = "edu.gacademy.account_operations.proto";
option java_multiple_files = true;

service AccountOperations {
    rpc GetNextLesson (GetNextLessonRequest) returns (GetNextLessonResponse);
}

message GetNextLessonRequest {
    string reqq = 1;
}

message GetNextLessonResponse {
    string ress = 1;
}